Stylesheet clipping fix

--- a/public/stylesheets/multitask/general.css
+++ b/public/stylesheets/multitask/general.css
@@ -269,7 +269,7 @@ input.btn_gris{width:130px;height:28px;background:url(/images/multitask/bg_eleme
 
 /* capa slide mix */
 .mix_bloque{width:900px;height:229px;background:url(/images/multitask/bg_bloquemix.png) no-repeat 0 0;padding:26px;position:relative;left:-3px;top:-3px;overflow:hidden;margin-bottom:15px;}
-.mix_visible{width:900px;height:221px;overflow:hidden;position:absolute;}
+.mix_visible{width:900px;height:230px;overflow:hidden;position:absolute;}
 .mix_sub{width:900px;height:260px;position:absolute;left:900px;color:#343434;}
 #sub_home{position:absolute;left:0;}
 /* capa informacion */
